# arculator

./: .gitignore  .hgignore  Makefile  Makefile.am  Makefile.in  Readme-LINUX.txt  Readme-NETWORKING.txt  aclocal.m4  arcrom  changes.txt  configure  configure.ac  mac-setup  readme.txt
.github/workflows/: build.yml
configs/: configs.txt
fs/: arculfs.txt
hostfs/: arculfs.txt
podules/: podules.txt
podules/aeh50/src/: Makefile.am  Makefile.mingw  aeh50.c  aeh50.h
podules/aeh54/src/: Makefile.am  Makefile.mingw  aeh54.c  aeh54.h  seeq8005.c  seeq8005.h
podules/aka05/src/: Makefile.am  Makefile.mingw  aka05.c
podules/aka10/src/: Makefile.am  Makefile.mingw  aka10.c
podules/aka12/src/: Makefile.am  Makefile.mingw  aka12.c  aka12.h
podules/aka16/src/: Makefile.am  Makefile.mingw  aka16.c
podules/aka31/src/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  aka31.c  aka31.h  d71071l.c  d71071l.h  hdd_file.c  hdd_file.h  scsi.c  scsi.h  scsi_cd.c  scsi_config.c  scsi_config.h  scsi_hd.c  wd33c93a.c  wd33c93a.h
podules/common/: common.txt
podules/common/adc/: d7002c.c  d7002c.h
podules/common/cdrom/: cdrom-linux-ioctl.c  cdrom-osx-ioctl.c  cdrom-windows-ioctl.c  cdrom.h
podules/common/eeprom/: 93c06.c  93c06.h
podules/common/joystick/: joystick_api.h  joystick_sdl2.c
podules/common/midi/: midi.h  midi_alsa.c  midi_null.c  midi_win.c
podules/common/misc/: 6522.c  6522.h
podules/common/net/: bswap.h  ne2000.c  ne2000.h  net.c  net.h  net_pcap.c  net_pcap.h  net_slirp.c  net_slirp.h
podules/common/net/slirp/: Makefile  slirp.c  slirp.h
podules/common/scsi/: hdd_file.c  hdd_file.h  scsi.c  scsi.h  scsi_cd.c  scsi_cd.h  scsi_config.c  scsi_config.h  scsi_hd.c
podules/common/sound/: sound_alsain.c  sound_in.h  sound_in_null.c  sound_openal.c  sound_out.h  sound_out_sdl2.c  sound_wavein.c
podules/common/uart/: 16550.c  16550.h  6850.c  6850.h  scc2691.c  scc2691.h
podules/designit_e200/src/: Makefile  Makefile.am  Makefile.mingw  designit_e200.c  designit_e200.h
podules/lark/src/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  ad1848.c  ad1848.h  am7202a.c  am7202a.h  lark.c  lark.h
podules/midimax/src/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  midimax.c  midimax.h
podules/morley_uap/src/: Makefile.am  Makefile.mingw  morley_uap.c
podules/oak_scsi/src/: Makefile.am  Makefile.mingw  ncr5380.c  ncr5380.h  oak_scsi.c
podules/pccard/src/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  pccard_podule.c  pccard_podule.h
podules/pccard/src/pcem/: 386.c  386_common.c  386_common.h  386_dynarec.c  386_ops.h  8087.h  808x.c  cpu.c  cpu.h  cpu_tables.c  diva.c  diva.h  dma.c  ibm.h  io.c  io.h  lpt.c  lpt.h  mem.c  mem.h  pc.c  pic.c  pit.c  scamp.c  scamp.h  serial.c  serial.h  timer.c  timer.h  x86.h  x86_flags.h  x86_ops.h  x86_ops_arith.h  x86_ops_atomic.h  x86_ops_bcd.h  x86_ops_bit.h  x86_ops_bitscan.h  x86_ops_call.h  x86_ops_cyrix.h  x86_ops_flag.h  (+30 more)
podules/src/aka31/: Makefile.linux  Makefile.mingw  aka31.c  aka31.h  d71071l.c  d71071l.h  scsi.h  scsi_hd.c  wd33c93a.c  wd33c93a.h
podules/src/ultimatecdrom/: Makefile.mingw  cdrom-ioctl.c  mitsumi.h  sound.h
podules/ultimatecdrom/src/: Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.mingw  cdrom-ioctl.c  cdrom-ioctl.h  mitsumi.c  mitsumi.h  soundopenal.c  soundopenal.h  ultimatecdrom.c  ultimatecdrom.h
roms/: arcrom_ext
roms/arthur120/: roms.txt
roms/podules/a3inv5/: roms.txt
roms/podules/akd52/: roms.txt
roms/podules/arcrom/: arcrom
roms/podules/colourcard/: roms.txt
roms/podules/g16/: roms.txt
roms/podules/hccs_a3k_ide/: roms.txt
roms/podules/hdfc/: roms.txt
roms/podules/idea/: roms.txt
roms/podules/riscdev/: roms.txt
roms/podules/zidefs/: roms.txt
roms/podules/zidefs_a3k/: roms.txt
roms/riscos310_a500/: roms.txt
src/: 1772.c  82c711.c  82c711.h  82c711_fdc.c  82c711_fdc.h  Makefile  Makefile.am  Makefile.in  Makefile.linux  Makefile.macos  Makefile.mingw  arc.h  arcrom.c  arcrom.h  arculator.rc  arculator.xrc  arculfs.c  arm.c  arm.h  arm3.c  bmu.c  bmu.h  cmos.c  cmos.h  colourcard.c  colourcard.h  config.c  config.h  cp15.c  cp15.h  ddnoise.c  debugger.c  debugger.h  debugger_swis.c  debugger_swis.h  disc.c  disc.h  disc_adf.c  disc_adf.h  disc_apd.c  (+130 more)
src/hostfs/: Makefile  arm_binutils.txt  hostfs,ffa  hostfs.s  hostfsfiler,ffa  hostfsfiler.s
